Ajout de détails important sur l'interface de lancement du crawler.
Ajout d'un attribut "required" sur les deux champs du formulaire de lancement.
Modification du champ demandant le nombre de page passant d'un champ "text" à un champ "number", plus adapté.
Changement sur le bouton qui est plus interractif pour l'utilisateur. Ajout d'une propriété hover et active dans le css.

--- a/public/style_crawler.css
+++ b/public/style_crawler.css
@@ -43,3 +43,11 @@ h2 {
 	padding: 1px 20px;
 	cursor: pointer;
 }
+
+.red_button:hover {
+	background-color: #E84545;
+}
+
+.red_button:active {
+	transform: scale(0.95);
+}
