--- a/public/style.css
+++ b/public/style.css
@@ -26,11 +26,11 @@ body{
 }
 .search_bar{
 	float: left;
-	width: 100%;
+	width: calc(100% - 40px);
 	border: 3px solid #ed5555;
 	padding: 5px;
 	height: 20px;
-	border-radius: 5px;
+	border-radius: 5px 0 0 5px;
 	outline: none;
 	color: #ed5555;
 }
@@ -84,11 +84,11 @@ header {
 .search_bar_result {
   position: absolute;
   float: left;
-  width: 100%;
+  width: calc(100% - 39px);
   height: 30px;
   border: 3px solid #ed5555;
   margin: 5px 0;
-  border-radius: 5px;
+  border-radius: 5px 0 0 5px;
   outline: none;
   color: #ed5555;
 }
@@ -105,7 +105,7 @@ header {
   background-position: center;
   left: calc(100% - 32px);
   width: 40px;
-  height: 36px;
+  height: 38px;
   margin: 5px 0;
   border: 1px solid #ed5555;
   background-color: #ed5555;
