--- a/public/style_crawler.css
+++ b/public/style_crawler.css
@@ -53,12 +53,6 @@ h2 {
 }
 
 /*statistiques*/
-#piechart_mots {
-	margin: auto; 
-	height: 400px; 
-	width: 95%;
-}
-
 #columnchart_mots {
 	margin: auto; 
 	height: 400px; 
@@ -76,4 +70,11 @@ h2 {
 .tab_site td, .tab_site th{
 	border: 1px solid black;
 	background-color: #ffffff;
+}
+
+.tab_site td {
+	border: 1px solid black;
+	background-color: #ffffff;
+	width: 50%;
+	word-wrap: break-word;
 }
